--- a/assets/styles/_popup.css
+++ b/assets/styles/_popup.css
@@ -8,7 +8,7 @@
     margin: 0 auto;
     width: 100vw;
     height: 100vh;
-    overflow-y: auto;
+    overflow: auto;
     scroll-behavior: smooth;
     z-index: 999;
     padding: 4em max(2em, 4vw);
